<resources>
    <string name="app_name">Final-Project</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="find_your_comfort_food_here">Find your Comfort Food here</string>
    <string name="here_you_can_find_a_chef_or_dish_for_every_taste_and_color_enjoy">Here You Can find a chef or dish for every taste and color. Enjoy!</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="foodninja">FoodNinja</string>
    <string name="deliever_favorite_food">Deliever Favorite Food</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="select_which_contact_details_should_we_use_to_reset_your_password">Select which contact details should we use to reset your password</string>
    <string name="via_email">Via email:</string>
    <string name="dot_sms">&#11044;&#11044;&#11044;&#11044; &#160;&#11044;&#11044;&#11044;&#11044; &#160;</string>
    <string name="dot_email">&#11044;&#11044;&#11044;&#11044; &#160;</string>
    <string name="via_sms">Via sms:</string>
    <string name="login_to_your_account">Login To Your Account</string>
    <string name="email_or_phone_number">Email or Phone Number</string>
    <string name="or_continue_with">  Or Continue With</string>
    <string name="forgot_your_password"><u>Forgot Your Password?</u></string>
    <string name="not_a_user_sign_up_now"><u>Not a User? Sign Up Now</u></string>
    <string name="already_have_account"><u>Already Have An Account?</u></string>
    <string name="continueee">Continue</string>
    <string name="next">Next</string>
    <string name="sign_up_for_free">Sign Up For Free</string>
    <string name="type_your_phone_number">Type your phone number</string>
    <string name="enter_6_digit_verification_code">Enter 6-digit Verification code</string>
    <string name="code_send_to">Code Send to</string>
    <string name="fill_in_your_bio_to_get_started">Fill in your bio to get started</string>
    <string name="this_data_will_help_us_manage_your_account">This data will help us manage your account</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="create_account">Create Account</string>
    <string name="congrats">Congrats!</string>
    <string name="your_profile_is_ready_to_use">Your Profile Is Ready To Use</string>
    <string name="try_order">Try Order</string>
    <string name="buy_now">Buy Now</string>
    <string name="find_your_favourite_food">Find Your Favourite Food</string>
    <string name="what_do_you_want_to_order">What do you want to order?</string>
    <string name="popular">Popular</string>
    <string name="menu">Menu</string>
    <string name="minutes">minutes</string>
    <string name="order_details">Order details</string>
    <string name="sub_total">Sub-Total</string>
    <string name="delivery_charge">Delivery Charge</string>
    <string name="total">Total</string>
    <string name="place_my_order">Place My Order</string>
    <string name="messages">Messages</string>
    <string name="cart">Cart</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="no_internet">No Internet Connection</string>
    <string name="error_client">Client Error</string>
    <string name="error_server">Server Error</string>
    <string name="error_http">Http Error</string>
    <string name="error_timeout">Timeout Error</string>
    <string name="unexpected_error">Unexpected Error</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="type_your_password">Type Your Password</string>
    <string name="login">Login</string>
    <string name="select_location">Select Location</string>
    <string name="english">English</string>
    <string name="georgian">Georgian</string>
    <string name="type_a_message">Type a message</string>
    <string name="favourites">Favourites</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log Out</string>
    <string name="home_home">Home</string>
    <string name="work">Work</string>
    <string name="other">Other</string>
    <string name="select_address">Select Address</string>
    <string name="address">Address</string>
    <string name="location_type">Location Type</string>
    <string name="the_location_type_helps_us_find_you_better">The location type helps us find you better</string>
    <string name="apartment">Apartment</string>
    <string name="house">House</string>
    <string name="office">Office</string>
    <string name="address_details">Address Details</string>
    <string name="building_name">Building name</string>
    <string name="entrance">Entrance</string>
    <string name="floor">Floor</string>
    <string name="description">Description</string>
    <string name="other_instruction_for_courier">Other instruction for courier</string>
    <string name="address_type">Address Type</string>
    <string name="add_or_create_address_labels_to_easily_choose_between_delivery_addresses">Add or create address labels to easily choose between delivery addresses.</string>
    <string name="add_address_details">Add address details</string>
    <string name="optional">optional</string>
    <string name="fill_all_fields">Fill all needed fields</string>
    <string name="fill_number_fields">Fill Number fields correctly</string>
    <string name="payment">Payment</string>
    <string name="location">Location</string>
    <string name="you_don_t_have_any_cards_added">You don\'t have any cards added.</string>
    <string name="card_number">Card Number</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="cvv">CVV</string>
    <string name="add_card">Add Card</string>
    <string name="locations">Locations</string>
    <string name="you_don_t_have_any_location_added">you don\'t have any location added</string>
    <string name="is_it_your_default_card_for_payment">Is it your default card for payment?</string>
    <string name="emoji">U+1F642</string>
    <string name="delivery_fee">%1$d ₾</string>
    <string name="delivery_time">%1$s min</string>
    <string name="restaurants">Restaurants</string>
    <string name="see_all">See All</string>
    <string name="fullname_validation_error">enter your full name with space between</string>
    <string name="email_validation_error">enter valid email</string>
    <string name="password_validation_error">password must contain 8 symbols, minimum 1 upper and lower case and 1 symbol</string>
    <string name="phone_validation_error">enter appropriate number</string>
    <string name="invalid_credentials_error">Invalid email or password</string>
    <string name="invalid_passcode_error">Invalid passcode try again</string>
    <string name="phone_email_validation_error">Invalid number and email.</string>
    <string name="chat_bot">Chat Bot</string>
    <string name="your_order_is_empty_start_ordering_now">Your Order Is Empty. Start ordering Now!</string>
    <string name="add_to_order">Add to order</string>
    <string name="_1">1</string>
    <string name="loading">loading…</string>
    <string name="phone_number">Phone Number</string>
    <string name="reset_passwprd">Password Reset Email is Sent</string>
    <string name="fill_one_field">Please Fill Only One Field</string>
    <string name="reset_your_password_here">Reset your password here</string>
    <string name="please_provide_new_password">Please Provide New Password</string>
    <string name="new_password">New Password</string>
    <string name="repeat_new_password">Repeat New Password</string>
    <string name="back">Back</string>
    <string name="passwords_dont_match">Passwords Don\'t Match</string>
    <string name="password_reset_succesful">Password reset successful</string>
    <string name="favourite_restaurants">Favourite Restaurants</string>
    <string name="go_to_checkout">Go To Checkout</string>
    <string name="card_name">Card Name</string>
    <string name="card_number_error">Enter Correct Card Number</string>
    <string name="card_name_error">Enter Card Name</string>
    <string name="card_exp_date_error">Enter Correct Date</string>
    <string name="card_cvv_error">Enter Three Digit Number</string>
    <string name="categories">Categories</string>
    <string name="waiting_for_a_courier">Waiting for a courier</string>

</resources>