<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    tools:context=".presentation.screen.delivery_location_add.DeliveryLocationAddFragment"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?android:windowBackground">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginTop="25dp"
                android:text="@string/address"
                android:textColor="?android:textColor"
                android:textSize="20sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/bentonsansregular"
                android:text="Zarzma 19, Tbilisi, Georgia"
                android:textColor="?android:textColor"
                android:textSize="17sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="25dp"
                android:text="@string/location_type"
                android:textColor="?android:textColor"
                android:textSize="20sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:text="@string/the_location_type_helps_us_find_you_better"
                android:textColor="?android:textColor"
                android:textSize="15sp" />

            <Spinner
                android:id="@+id/spinnerLocationType"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/edit_text_background"
                android:popupBackground="@drawable/edit_text_background"
                tools:ignore="true" />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="end"
                android:layout_marginTop="-50dp"
                android:layout_marginEnd="33dp"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_dropdown_arrow" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="45dp"
                android:text="@string/address_details"
                android:textColor="?android:textColor"
                android:textSize="20sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etBuildingName"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:inputType="text"
                android:maxLines="1"
                android:lines="1"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="25dp"
                android:background="@drawable/edit_text_background"
                android:hint="@string/building_name"
                android:paddingHorizontal="20dp"
                android:textColor="?android:textColor" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etEntrance"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_text_background"
                android:hint="@string/entrance"
                android:inputType="numberDecimal"
                android:paddingHorizontal="20dp"
                android:textColor="?android:textColor" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etFloor"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_text_background"
                android:hint="@string/floor"
                android:inputType="numberDecimal"
                android:paddingHorizontal="20dp"
                android:textColor="?android:textColor" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etApartment"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_text_background"
                android:hint="@string/apartment"
                android:inputType="numberDecimal"
                android:paddingHorizontal="20dp"
                android:textColor="?android:textColor" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="25dp"
                android:text="@string/description"
                android:textColor="?android:textColor"
                android:textSize="20sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etDescription"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/edit_text_background"
                android:hint="@string/other_instruction_for_courier"
                android:inputType="textMultiLine"
                android:paddingHorizontal="20dp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/optional"
                android:textColor="@color/grey"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:textSize="17sp"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="25dp"
                android:text="@string/address_type"
                android:textColor="?android:textColor"
                android:textSize="20sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/add_or_create_address_labels_to_easily_choose_between_delivery_addresses"
                android:textColor="?android:textColor"
                android:textStyle="normal" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerAddressType"
                android:layout_width="match_parent"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="100dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"/>

        </LinearLayout>

    </ScrollView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnAddAddressDetails"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="20dp"
        android:layout_gravity="bottom"
        android:layout_marginBottom="20dp"
        android:background="@drawable/button_background"
        android:text="@string/add_address_details"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textAllCaps="false"/>

</FrameLayout>
