<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.screen.card_add.fragment.AddCardFragment">
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etCardNumber"
        android:inputType="number"
        android:digits="0123456789"
        android:maxLength="19"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:hint="@string/card_number"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        app:layout_constraintWidth_default="wrap"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etExpiryDate"
        android:inputType="numberSigned"
        android:digits="0123456789/"
        android:maxLength="5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/etCvv"
        app:layout_constraintTop_toBottomOf="@+id/etCardNumber"
        android:hint="@string/expiry_date"
        android:layout_width="0dp"
        android:layout_height="48dp"
        app:layout_constraintWidth_percent="0.5"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etCvv"
        android:digits="0123456789"
        android:maxLength="3"
        android:inputType="numberPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etCardNumber"
        android:hint="@string/cvv"
        android:layout_width="0dp"
        android:layout_height="48dp"
        app:layout_constraintWidth_percent="0.5"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnAddCard"
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:layout_marginTop="50dp"
        android:layout_marginHorizontal="30dp"
        android:background="@drawable/button_background"
        android:text="@string/add_card"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="30dp" />

</androidx.constraintlayout.widget.ConstraintLayout>