<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/button_background">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="center"
        android:src="@drawable/food_pattern_checkout" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvSubTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="29dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/bentonsansregular"
        android:text="@string/sub_total"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvSubTotalPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="23dp"
        android:fontFamily="@font/bentonsansregular"
        android:text="120 ₾"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvDeliveryCharge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="29dp"
        android:layout_marginTop="7dp"
        android:fontFamily="@font/bentonsansregular"
        android:text="@string/delivery_charge"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvSubTotal" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvDeliveryChargePrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="23dp"
        android:fontFamily="@font/bentonsansregular"
        android:text="20 ₾"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvSubTotalPrice" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="29dp"
        android:layout_marginTop="19dp"
        android:fontFamily="@font/bentonsansbold"
        android:text="@string/total"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvDeliveryCharge" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTotalPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="19dp"
        android:fontFamily="@font/bentonsansbold"
        android:text="140 ₾"
        android:layout_marginEnd="23dp"
        app:layout_constraintTop_toBottomOf="@id/tvDeliveryChargePrice"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnPlaceOrder"
        android:layout_width="325dp"
        android:layout_height="57dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/edit_text_background"
        android:fontFamily="@font/bentonsansbold"
        android:gravity="center"
        android:text="@string/place_my_order"
        android:textAllCaps="false"
        android:textColor="@color/green"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTotal" />


</androidx.constraintlayout.widget.ConstraintLayout>